--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bootstrap 4 &amp; WebPack Boilerplate</title>
+    <title>To-do list</title>
 
     <link rel="stylesheet" href="dist/style.css" />
   </head>
 
   <body>
-    <header id="main-header" class="bg-success text-white p-4 mb-3">
+    <header id="main-header" class="bg-info text-white p-4 mb-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-6"><h1 id="header-title">Item Lister</h1></div>
+          <div class="col-md-6"><h1 id="header-title">To-do list</h1></div>
           <div class="col-md-6 align-self-center">
             <input
               type="text"
